Added Custom Working Enchantment - Remove ClassScanner.java - Added Mysql.java for reduce time on creating database support plugin - Renamed package <groupId>.api.gui -> <groupId>.api.menu - Removed All pluginApi support for newer changes in the future - Renamed PiXCommand.java to XCommand and add Method to register a command that is extends to XCommand class - Remove All databases support for newer changes in the future - Removed ItemCreator.setGlow() method - Added new way to create lang.yml and config.yml (Not tested yet) - Added Plugin Config version checker (WIP)